--- a/src/app/components/routine-generated/routine-generated.component.html
+++ b/src/app/components/routine-generated/routine-generated.component.html
@@ -1,68 +1,67 @@
 <main>
-  <div class="position-relative">
+  <div class="position-relative marginpage">
+    <app-spinner></app-spinner>
     <section class="section section-lg section-shaped pb-250">
-      <div class="shape shape-style-1 shape-primary">
-      </div>
-      <div style="position: relative">
-        <app-spinner></app-spinner>
-        <!--
-        <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
-          <p style="font-size: 20px; color: white">Loading...</p>
-        </ngx-spinner>
-        -->
-        <div class="col-sm-9"><br>
-          <h2 class="display-3 mb-0"
-            style="color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
-            Selecciona ejercicios y crea tu rutina personalizada:
+      <div class="shape shape-style-1 shape-primary"></div>
+        <div class="col-sm-12">
+          <h2 class="title display-3 mb-0">
+            Seleccioná ejercicios y creá tu rutina personalizada
           </h2>
-        </div><br>
+        </div>
         <div class="row">
-          <div class="col" style="text-align:center">
+          <div class="col col-lg-12" style="text-align: center;">
             <div ngbDropdown class="d-inline-block">
-              <div style="color:rgb(255, 255, 255); text-transform:uppercase; height:4rem; text-align: center;"
-                *ngIf="!isVisible()">
-                <h3>Debe ingresar el nombre de la rutina, ingresar el día de la semana, duración y seleccionar al menos
-                  un ejercicio.</h3>
-              </div>
-              <h2 class="display-3 " style="color:rgb(252, 252, 252); font-size:15px; text-align:center;">
-                Nombre de su nueva rutina:
-                <div class="form-group has-success mt-2" *ngIf="validationNameRoutine()">
-                  <input type="string" id="nameNewRoutine" [(ngModel)]="nameNewRoutine" name="nameNewRoutine"
-                    class="form-control" />
-                </div>
-                <div class="form-group has-danger" *ngIf="!validationNameRoutine()">
-                  <input type="string" placeholder="Ingrese el nombre de su nueva rutina" [(ngModel)]="nameNewRoutine"
-                    name="nameNewRoutine" class="form-control">
+                <h3 class="subtitle">Debe ingresar el nombre de la rutina, duración, los días de la semana y seleccionar al menos un ejercicio</h3>
+
+              <h2 class="display-3">
+                <div class="col-lg-12 form-group instruction">
+                  Nombre de su nueva rutina:
+                  <div class="form-group has-success mt-2" *ngIf="validationNameRoutine()">
+                    <input type="string" id="nameNewRoutine" [(ngModel)]="nameNewRoutine" name="nameNewRoutine"
+                      class="form-control"/>
+                  </div>
+                  <div class="form-group has-danger" *ngIf="!validationNameRoutine()">
+                    <input type="string" placeholder="Ingrese el nombre de su nueva rutina" [(ngModel)]="nameNewRoutine"
+                      name="nameNewRoutine" class="form-control">
+                  </div>
                 </div>
               </h2>
-              <h2 class="display-3 " style="color:rgb(255, 255, 255); font-size:15px; text-align:center;">
-                Ingrese la cantidad de semanas que quiere realizar la rutina:
-                <div class="form-group has-success mt-2" *ngIf="validationValueWeeks()">
-                  <input type="number" id="validationValueWeeks" [(ngModel)]="weeksRoutine" name="weeksRoutine"
-                    class="form-control" />
+              <h2 class="display-3">
+                <div class="col-lg-12 form-group instruction">
+                  Ingrese la cantidad de semanas que quiere realizar la rutina:
+                  <div class="form-group has-success mt-2" *ngIf="validationValueWeeks()">
+                    <input type="number" id="validationValueWeeks" [(ngModel)]="weeksRoutine" name="weeksRoutine"
+                      class="form-control" />
+                  </div>
+                  <div class="form-group has-danger" *ngIf="!validationValueWeeks()">
+                    <input type="number" placeholder="Ingrese la cantidad de semanas entre 1 y 20"
+                      [(ngModel)]="weeksRoutine" name="weeksRoutine" class="form-control">
+                  </div>
                 </div>
-                <div class="form-group has-danger" *ngIf="!validationValueWeeks()">
-                  <input type="number" placeholder="Ingrese la cantidad de semanas entre 1 y 20"
-                    [(ngModel)]="weeksRoutine" name="weeksRoutine" class="form-control">
-                </div>
-                Seleccione el día de la semana que quiere realizar esta rutina:
-                <mat-form-field appearance="outline">
-                  <mat-label style="color:rgb(255, 255, 255) !important;">Días seleccionados</mat-label>
-                  <mat-select [(ngModel)]="daySelectedInRoutine" name="selectedDays" multiple>
+              </h2>
+              <h2 class="display-3"> 
+                <div class="col-lg-12 form-group instruction">
+                Seleccione los días de la semana que quiere realizar la rutina:
+                <mat-form-field appearance="outline" class="formSelectDay">
+                  <mat-label class="colorLabelText">Días seleccionados</mat-label>
+                  <mat-select [(ngModel)]="daySelectedInRoutine" name="selectedDays" multiple class="select-day2">
                     <mat-option *ngFor="let dia of getValues(weekdays)" [value]="dia">{{ dia }}</mat-option>
                   </mat-select>
                 </mat-form-field>
+                </div>
               </h2>
-              <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="isVisible()">
+              <div class="startRoutine-button" *ngIf="isVisible()">
                 <a href="javascript:void(0)" (click)="createRoutine(classic3)" id="startRoutine" class="btn btn-success mt-0">
                   Iniciar Rutina
                 </a>
               </div>
-              <h2 class="display-3 " style="color:rgb(252, 252, 252); font-size:15px;">
-                Filtrar ejercicios
-                <div class="form-group input-wrapper">
-                  <input type="text" class="form-control" placeholder="Buscar.." [(ngModel)]="filterpost"
-                    name="filterpost" />
+              <h2 class="display-3">
+                <div class="col-lg-12 form-group instruction">
+                  Filtrar ejercicios
+                  <div class="form-group input-wrapper input-margin">
+                    <input type="text" class="form-control" placeholder="Buscar.." [(ngModel)]="filterpost"
+                      name="filterpost" />
+                  </div>
                 </div>
               </h2>
             </div>
@@ -77,20 +76,21 @@
               </button>
             </div>
             <div class="modal-body">
-              <div class="py-3 text-center">
+              <div class="text-center">
                 <i class="ni ni-like-2 ni-3x"></i>
-                <h4 class="heading mt-4">Su rutina se generó correctamente!</h4>
+                <h2 class="heading mt-4">Su rutina se generó correctamente!</h2>
                 <p>Usted a iniciado la rutina: {{ nameNewRoutine }}, puede acceder a ella desde Ver mis rutinas.</p>
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-white" href="javascript:void(0)"
                 (click)="c('Close click'); navigateMyRoutine()">Ver mis rutinas</button>
-              <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal"
+              <button type="button" class="btn ml-auto" data-dismiss="modal"
                 (click)="c('Close click')">Cerrar</button>
             </div>
           </div>
         </ng-template>
+      <div class="col-lg-12">
         <div class="row row-grid justify-content-center">
           <ul class="code-editor-options-menu" *ngFor="let dat of allExercise | filter: filterpost">
             <div class="card border-light mb-10" [ngClass]="exerciseIsSelected(dat)">
@@ -104,8 +104,6 @@
                     <mat-option *ngFor="let dia of diasEjercicios" [value]="dia"> Día {{ dia }}</mat-option>
                   </mat-select>
                 </mat-form-field>
-            <!--</div>-->
-            
             <div class="card-footer bg-transparent border-0" style="padding :0; margin :0;">
               <div *ngIf="isSelected(dat)">
                 <a href="javascript:void(0)" (click)="addExerciseToRoutine(dat)">
@@ -126,11 +124,14 @@
                 </a>
               </div>
             </div>
-
           </div>
-
           </ul>
         </div>
+      </div>
+      <div class="startRoutine-button margin-button" *ngIf="isVisible()">
+        <a href="javascript:void(0)" (click)="createRoutine(classic3)" id="startRoutine" class="btn btn-success mt-0">
+          Iniciar Rutina
+        </a>
       </div>
     </section>
   </div>
