--- a/src/app/components/routine-generated/routine-generated.component.html
+++ b/src/app/components/routine-generated/routine-generated.component.html
@@ -9,10 +9,9 @@
           </h2>
         </div>
         <div class="row">
-          <div class="col col-lg-12" style="text-align: center;">
+          <div class="col col-lg-12">
             <div ngbDropdown class="d-inline-block">
-                <h3 class="subtitle">Debe ingresar el nombre de la rutina, duración, los días de la semana y seleccionar al menos un ejercicio</h3>
-
+              <h3 class="subtitle">Debe ingresar el nombre de la rutina, duración, los días de la semana y seleccionar al menos un ejercicio</h3>
               <h2 class="display-3">
                 <div class="col-lg-12 form-group instruction">
                   Nombre de su nueva rutina:
@@ -104,10 +103,10 @@
                     <mat-option *ngFor="let dia of diasEjercicios" [value]="dia"> Día {{ dia }}</mat-option>
                   </mat-select>
                 </mat-form-field>
-            <div class="card-footer bg-transparent border-0" style="padding :0; margin :0;">
+            <div class="card-footer bg-transparent border-0">
               <div *ngIf="isSelected(dat)">
                 <a href="javascript:void(0)" (click)="addExerciseToRoutine(dat)">
-                  <div style="text-align: center; color:rgb(2, 0, 134);font-weight: 700; font-size:18px;">
+                  <div class="addExerciseText">
                     <i>
                       + Agregar
                     </i>
@@ -116,7 +115,7 @@
               </div>
               <div *ngIf="!isSelected(dat)">
                 <a href="javascript:void(0)" (click)="removeExerciseToRoutine(dat)">
-                  <div style="text-align: center; color:red;font-weight: bolder; font-size:18px;">
+                  <div class="removeExerciseText">
                     <i>
                       - Quitar
                     </i>
