--- a/src/app/components/routine-generated/routine-generated.component.css
+++ b/src/app/components/routine-generated/routine-generated.component.css
@@ -54,6 +54,10 @@
 
 .formSelectDay {
     width: 100%;
+    /*
+    height: 60px;
+    border-radius: 5px !important;
+    background-color: #fff !important;*/
 }
 
 .colorLabelText {
