--- a/src/app/components/welcome/welcome.component.css
+++ b/src/app/components/welcome/welcome.component.css
@@ -6,4 +6,13 @@
 
 img {
     width: 300px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+}
+
+p {
+    margin-top: 40px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
 }
