--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -15,7 +15,7 @@
            <span class="span-100"></span>
          </div>
 
-         <div class="container shape-container d-flex align-items-center py-lg">
+         <div class="container shape-container d-flex align-items-center">
            <div class="col px-0">
              <div class="row align-items-center justify-content-center">
                <div class="col-lg-6 text-center">
