--- a/src/app/components/routine-today/routine-today.component.html
+++ b/src/app/components/routine-today/routine-today.component.html
@@ -10,23 +10,28 @@
               <app-title-accordion  [routine]="rou"
                                     (openDetails)="setOpenDetail(rou, $event)">
               </app-title-accordion>
-              <div *ngIf="getOpenDetail(rou)">
+
+              <div *ngIf="nextRoutine()">
                 <mat-tab-group dynamicHeight #tabGroup (selectedTabChange)="tabSelectedRoutine(rou,$event)">
                   <ul *ngFor="let day of daysRoutine(rou)">
                     <mat-tab label="Dia {{day}}"> <br>
                       <div class="row justify-content-center" >
-                        <ul class="code-editor-options-menu" *ngFor="let dat of exercisesRou(rou,day)">
                           <div class="card border-light mb-10" [ngClass]="'card-transparent'">
-                            <app-exercise-information-card [exercise]="dat">
+                            <app-exercise-information-card [exercise]="exerciseSelect">
                             </app-exercise-information-card>
                           </div>
                           <br>
-                        </ul>
                       </div>
                     </mat-tab>
                   </ul>
                 </mat-tab-group>
-              </div>
+                <br>
+                  <button type="button" class="btn btn-white"  href="javascript:void(0)" (click)="nextExercise()">Siguiente</button>
+                </div>
+                <div *ngIf="!nextRoutine()">
+                  <app-opinion-day [disable]="false">
+                  </app-opinion-day>
+                </div>
             </div>
           </div>
         </div>
