--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -10,108 +10,75 @@
       <span></span>
       <span></span>
     </div>
-    <!-- SVG separator -->
-    <div class="separator separator-bottom separator-skew">
-      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-      </svg>
-    </div>
     <div class="container">
+      <div class="col-sm-12">
+        <h2 class="title display-3 mb-0">
+          Editar Perfil
+        </h2>
+      </div>
       <div class="px-4">
         <div class="main-content">
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col-md-8">
+              <ngb-alert class="alert alert-dismissible fade show" type='success' role="alert"
+                *ngIf="messageAlert != ''">
+                <span class="alert-inner--icon"><i class="ni ni-like-2"></i></span>
+                <span class="alert-inner--text"><strong>Actualizado correcto!</strong>{{ messageAlert }}</span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
+                </button>
+              </ngb-alert>
+              <ngb-alert class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
+                <span class="alert-inner--text"><strong>{{ errorMessage }}</strong></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
+                </button>
+              </ngb-alert>
               <div class="card">
-                <div class="card-header">
-                  <h5 class="title">Editar Perfil</h5>
-                </div>
+                <div class="card-header"></div>
                 <div class="card-body">
-                  <form>
+                  <form [formGroup]="updateForm.baseForm" class="form">
                     <div class="row">
-                      <div class="col-md-6 pr-1">
+                      <div class="col-md-12">
                         <div class="form-group">
-                          <label>Email</label>
-                          <input name="email" id="email" type="email" disabled="" class="form-control" placeholder="pepito@gmail.com">
+                          <label>Email:</label>
+                          <input [(ngModel)]="user.mail" name="mail" id="mail" formControlName="mail" type="mail"
+                            disabled="" class="form-control">
                         </div>
                       </div>
-                      <div class="col-md-6 px-1">
-                        <div class="form-group">
-                          <label>Nombre de Usuario:</label>
-                          <input type="text" class="form-control" placeholder="Username" value="pepito123">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-6 pr-1">
+                      <div class="col-md-12">
                         <div class="form-group">
                           <label>Nombre:</label>
-                          <input type="text" class="form-control" placeholder="Company" value="Mike">
+                          <input [(ngModel)]="user.name" name="name" formControlName="name" type="text"
+                            class="form-control">
+                          <mat-error *ngIf="checkField('name')">
+                            {{ updateForm.errorMessageName }}
+                          </mat-error>
                         </div>
                       </div>
-                      <div class="col-md-6 pl-1">
-                        <div class="form-group">
-                          <label>Apellido:</label>
-                          <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
                       <div class="col-md-12">
                         <div class="form-group">
-                          <label>Address</label>
-                          <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
+                          <label>Password:</label>
+                          <input [(ngModel)]="user.password" name="password" formControlName="password" type="password"
+                            class="form-control">
+                          <mat-error *ngIf="checkField('password')">
+                            {{ updateForm.errorMessage }}
+                          </mat-error>
                         </div>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-4 pr-1">
-                        <div class="form-group">
-                          <label>City</label>
-                          <input type="text" class="form-control" placeholder="City" value="Mike">
-                        </div>
-                      </div>
-                      <div class="col-md-4 px-1">
-                        <div class="form-group">
-                          <label>Country</label>
-                          <input type="text" class="form-control" placeholder="Country" value="Andrew">
-                        </div>
-                      </div>
-                      <div class="col-md-4 pl-1">
-                        <div class="form-group">
-                          <label>Postal Code</label>
-                          <input type="number" class="form-control" placeholder="ZIP Code">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
                       <div class="col-md-12">
                         <div class="form-group">
-                          <label>About Me</label>
-                          <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
+                          <label>Celular:</label>
+                          <input [(ngModel)]="user.mobileNumber" name="mobileNumber" formControlName="mobileNumber"
+                            type="text" class="form-control" placeholder="Agregar celular para recibir notificaciones">
+                          <mat-error *ngIf="checkField('mobileNumber')">
+                            {{ updateForm.errorMessageMobileNumber }}
+                          </mat-error>
                         </div>
                       </div>
                     </div>
                   </form>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card card-user">
-                <div class="card-body">
-                  <div class="author">
-                    <a href="#">
-                      <img class="avatar border-gray" src="../assets/img/mike.jpg" alt="...">
-                      <h5 class="title">Mike Andrew</h5>
-                    </a>
-                    <p class="description">
-                      michael24
-                    </p>
+                  <div class="text-center">
+                    <button (click)="update(user)" class="btn btn-primary">Actualizar</button>
                   </div>
-                  <p class="description text-center">
-                    "Lamborghini Mercy
-                    <br> Your chick she so thirsty
-                    <br> I'm in that two seat Lambo"
-                  </p>
                 </div>
               </div>
             </div>
