--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -77,7 +77,7 @@
                     </div>
                   </form>
                   <div class="text-center">
-                    <button (click)="update(user)" class="btn btn-primary">Actualizar</button>
+                    <button [disabled]="updateForm.baseForm.invalid" type="button" (click)="update()" class="btn btn-primary">Actualizar</button>
                   </div>
                 </div>
               </div>
