--- a/src/app/components/reusableComponent/opinion-routine/opinion-routine.component.css
+++ b/src/app/components/reusableComponent/opinion-routine/opinion-routine.component.css
@@ -1,4 +1,6 @@
 .messageOpinion {
-    text-align: right;
-    font-weight: 300;
+    text-align: left;
+    font-weight: 400;
+    margin-left: 18px;
+    margin-top: -18px;
 }
