--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -15,7 +15,7 @@ section::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right,#f00,#f00,#0f0,#0ff,#ff0,#0ff);
+    background: linear-gradient(to right,#b700ff,#ff00f2,#5900ff,#f00,#f00,#ffbc00,#ff0);
     mix-blend-mode: color;
     pointer-events: none;
 }
@@ -55,6 +55,7 @@ h2 span {
     text-align: center;
     letter-spacing: 0.5px;
     animation: animate 1s linear forwards;
+    font-weight: 400;
 }
 
 @keyframes animate {
@@ -115,5 +116,11 @@ h2 span:nth-child(1) {
     video {
         height: 100vh;
         width: 100%;
+    }
+}
+
+@media (min-width: 748px) {
+    h2 span {
+        margin-left: -35px;
     }
 }
