--- a/src/app/components/routine-generated/routine-generated.component.css
+++ b/src/app/components/routine-generated/routine-generated.component.css
@@ -17,6 +17,7 @@
 .card {
     background-color: rgb(243, 247, 250) !important;
     height:22rem;
+    margin-left: -20px;
 }
 
 .title {
@@ -54,10 +55,6 @@
 
 .formSelectDay {
     width: 100%;
-    /*
-    height: 60px;
-    border-radius: 5px !important;
-    background-color: #fff !important;*/
 }
 
 .colorLabelText {
@@ -100,11 +97,32 @@
     font-size:18px;
 }
 
+.wrapper {
+    margin-top: 20px;
+    margin-bottom: 150px;
+}
+
+.separator {
+    z-index: -1;
+    text-decoration: none;
+    border: 0px;
+}
+
+.section-margin {
+    margin-bottom: -100px;
+}
+
 @media (min-width: 1024px) {
     .marginpage {
         margin-bottom: -100px;
     }
     .margin-button {
         margin-bottom: -50px;
+    }
+}
+
+@media (max-width: 768px) {
+    .card {
+        margin-left: -35px;
     }
 }
