--- a/src/app/components/routine-generated/routine-generated.component.html
+++ b/src/app/components/routine-generated/routine-generated.component.html
@@ -1,8 +1,15 @@
 <main>
   <div class="position-relative marginpage">
     <app-spinner></app-spinner>
-    <section class="section section-lg section-shaped pb-250">
-      <div class="shape shape-style-1 shape-primary"></div>
+    <section class="section section-lg section-shaped section-margin">
+      <div class="shape shape-style-1 shape-primary">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
         <div class="col-sm-12">
           <h2 class="title display-3 mb-0">
             Seleccioná ejercicios y creá tu rutina personalizada
@@ -66,6 +73,14 @@
             </div>
           </div>
         </div>
+        <!-- SVG separator -->
+      <div class="separator separator-bottom separator-skew">
+        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+          <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+        </svg>
+      </div>
+      </section>
+      <section class="wrapper">
         <ng-template #classic3 let-c="close" let-d="dismiss">
           <div class="modal-content bg-gradient-danger">
             <div class="modal-header">
