--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -11,6 +11,7 @@
       <span></span>
     </div>
     <div class="container">
+      <app-spinner></app-spinner>
       <div class="col-sm-12">
         <h2 class="title display-3 mb-0">
           Editar Perfil
