--- a/src/app/components/reusableComponent/title-accordion/title-accordion.component.html
+++ b/src/app/components/reusableComponent/title-accordion/title-accordion.component.html
@@ -1,6 +1,4 @@
-<div style="text-align:center; 
-            text-transform:uppercase;font-size:170%;" 
-            [ngStyle]="{color: this.colorText}">
+<div class="title" [ngStyle]="{color: this.colorText}">
   <a id="button1" (click)="setOpenDetail(true)" class="bdropdown-item" *ngIf="!routinesOpenDetail">
     {{ routine.nameRoutine }} <i class="bi bi-caret-down-fill"> </i>
   </a>
