--- a/src/app/components/reusableComponent/opinion-mobile/opinion-mobile.component.css
+++ b/src/app/components/reusableComponent/opinion-mobile/opinion-mobile.component.css
@@ -12,6 +12,7 @@
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
+    margin-bottom: 20px;
 }
 
 .button-row .mat-button-base {
@@ -40,6 +41,7 @@
         width: 30px;
     }
     .button-row {
-        margin-right: -100px !important;
+        margin-left: 40px;
+        margin-bottom: 20px;
     } 
 }
