--- a/src/app/components/reusableComponent/routine-mobile/routine-mobile.component.css
+++ b/src/app/components/reusableComponent/routine-mobile/routine-mobile.component.css
@@ -1,4 +1,3 @@
-@use '../../../calendar/variables' as *;
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
 .calendar-wrapper {
@@ -27,23 +26,10 @@
 }
 
 .title {
-    color: #fff; 
-    margin-top: 20px; 
-    margin-bottom: 20px !important;
-    font-size: 25px; 
+    color: #fff !important; 
+    font-size: 15px; 
     text-align: center; 
     font-weight: bolder;
-    text-transform: uppercase;
-}
-
-.title2 {
-    font-size: 25px;
-    text-align: center; 
-    font-weight: bolder;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0 !important;
 }
 
 .card {
@@ -65,4 +51,5 @@
     font-weight: bolder;
     margin-top: 20px;
     border-radius: 10px;
+    margin-left: -40px;
 }
