--- a/src/app/components/reusableComponent/title-accordion/title-accordion.component.css
+++ b/src/app/components/reusableComponent/title-accordion/title-accordion.component.css
@@ -1,1 +1,7 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
+.title {
+    text-align:center; 
+    text-transform:uppercase;
+    font-size:150%;
+}
